--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
             table-layout: fixed;
         }
         th, td {
-            border: 1px solid black;
+            border: 3px solid black;
             text-align: center;
             padding: 10px;
             word-wrap: break-word;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #ffffff;
         }
+        table {
+    width: 1000px;
+          }
+
     </style>
     <style>
       body {
