--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         </tr>
         <tr>
             <td>วันจันทร์</td>
-            <td colspan="4">โปรแกรมสำเร็จรูป<br>434<br>พรพิลาศ</td>
+            <td colspan="4">โปรแกรมสำเร็จรูป<br>434<br>พรพิงค์</td>
             <td colspan="1"></td>
-            <td>กฎหมาย<br>421<br>รุธิราภา</td>
+            <td>กฎหมาย<br>421<br>ฐณัฐฐา</td>
             <td colspan="1"></td>
             <td colspan="1"></td>
         </tr>
@@ -90,33 +90,33 @@
             <td>วันอังคาร</td>
             <td colspan="2">อนามัยความปลอดภัย<br>534<br>สุวรรณา</td>
             <td colspan="1"></td>
-            <td colspan="2">การเขียนอังกฤษ<br>544<br>สมโภญา</td>
-            <td colspan="2">ธุรกิจ<br>414<br>สุบิน</td>
+            <td colspan="2">การเขียนอังกฤษ<br>544<br>สมัชญา</td>
+            <td colspan="2">ธุรกิจ<br>414<br>สุชิน</td>
             <td colspan="1"></td>
         </tr>
         <tr>
             <td>วันพุธ</td>
-            <td colspan="2">วิทยาศาสตร์<br>425<br>นงนุศ</td>
-            <td colspan="2">การสร้างเว็บไซต์<br>432<br>วิมลตา</td>
+            <td colspan="2">วิทยาศาสตร์<br>425<br>นภสร</td>
+            <td colspan="2">การสร้างเว็บไซต์<br>432<br>วิมณฑา</td>
             <td colspan="1"></td>
-            <td colspan="1">โฮมรูม<br>พรพิลาศ</td>
-            <td colspan="2">กิจกรรมเสริมคุณธรรม<br>พรพิลาศ</td>
+            <td colspan="1">โฮมรูม<br>พรพิงค์</td>
+            <td colspan="2">กิจกรรมเสริมคุณธรรม</td>
         </tr>
         <tr>
             <td>วันพฤหัสบดี</td>
-            <td colspan="2">การสร้างเว็บไซต์<br>432<br>วิมลตา</td>
-            <td colspan="2">โปรเจค<br>434<br>พรพิลาศ</td>
+            <td colspan="2">การสร้างเว็บไซต์<br>432<br>วิมณฑา</td>
+            <td colspan="2">โปรเจค<br>434<br>พรพิงค์</td>
             <td colspan="1"></td>
-            <td colspan="1">ธุรกิจ<br>414<br>สุบิน</td>
+            <td colspan="1">ธุรกิจ<br>414<br>สุชิน</td>
             <td colspan="1"></td>
             <td colspan="1"></td>
         </tr>
         <tr>
             <td>วันศุกร์</td>
-            <td colspan="2">ประวัติศาสตร์<br>521<br>ณัฐณากร</td>
+            <td colspan="2">ประวัติศาสตร์<br>521<br>ณัฏฐ์ทนากร</td>
             <td colspan="1"></td>
-            <td colspan="2">โครงการ<br>434<br>พรพิลาศ</td>
-            <td>วิทยาศาสตร์<br>425<br>นงนุศ</td>
+            <td colspan="2">โครงการ<br>434<br>พรพิงค์</td>
+            <td>วิทยาศาสตร์<br>425<br>นภสร</td>
             <td colspan="1"></td>
             <td colspan="1"></td>
         </tr>
