--- a/index.html
+++ b/index.html
@@ -24,31 +24,41 @@
           }
 
     </style>
+
     <style>
       body {
   font-family: 'text-align: center;
   height: auto;
           }
     </style>
+
     <style>
       .rotated-text {
           transform: rotate(270deg);
       }
   </style>
+    <style>
+        img {
+        width: 5%;
+        height: auto;
+        object-fit: cover;
+        }
+    </style>
 </head>
 <body>
 
-<h2>ตรางสอน</h2>
-<a href="https://www.facebook.com/kawin000012" target="_blank">
-  <img src="https://img.icons8.com/?size=100&id=118501&format=png&color=000000" style="width:20%; height:auto;">
+<center><h2>เครดิต</h2>
+            <a href="https://www.facebook.com/kawin000012" target="_blank">
+            <img src="https://img.icons8.com/?size=100&id=118501&format=png&color=000000">
 
-  <a href="https://www.instagram.com/kawin000012" target="_blank">
-    <img src="https://img.icons8.com/?size=100&id=43625&format=png&color=000000" style="width:20%; height:auto;">
-</a>
+            <a href="https://www.instagram.com/kawin000012" target="_blank">
+                <img src="https://img.icons8.com/?size=100&id=43625&format=png&color=000000">
+            </a>
 
-<a href="https://www.threads.net/@kawin000012" target="_blank">
-  <img src="https://img.icons8.com/?size=100&id=oykyblY20T6o&format=png&color=000000" style="width:20%; height:auto;">
-</a>
+            <a href="https://www.threads.net/@kawin000012" target="_blank">
+            <img src="https://img.icons8.com/?size=100&id=oykyblY20T6o&format=png&color=000000">
+            </a>
+        </center>
 <table>
         <tr>
             <th rowspan="2">เวลา</th>
