--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </style>
     <style>
         img {
-        width: 5%;
+        width: 60px;
         height: auto;
         object-fit: cover;
         }
